<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MusicActivity">

    <LinearLayout
        android:id="@+id/line_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/btn_back_name"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="9"
            android:autofillHints="11"
            android:maxLength="15"
            android:maxLines="1"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <ListView
        android:id="@+id/music_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"/>

    <LinearLayout
        android:id="@+id/line2_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/music_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="5">
            <com.example.blind.MyTextView
                android:id="@+id/music_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:fadingEdge="horizontal"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:scrollHorizontally="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:textSize="25sp"
                android:text="@string/music_name"/>
            <TextView
                android:id="@+id/music_player"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/music_player_name"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
